--- a/Docs/requirements.txt
+++ b/Docs/requirements.txt
@@ -18,11 +18,19 @@ webdriver-manager>=3.4.2
 
 # Knowledge graph
 rdflib>=6.0.0
+SPARQLWrapper>=1.8.5
+
+# Knowledge graph embedding
+pykeen>=1.10.0
+torch>=1.10.0
 
 # Visualization
 matplotlib>=3.4.2
 networkx>=2.6.2
 pyvis>=0.1.9
+scikit-learn>=1.0.0
+seaborn>=0.11.2
+plotly>=5.5.0
 
 # Jupyter
 jupyter>=1.0.0
